--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+appdirs==1.4.4
+black==20.8b1
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
 google-api-core==1.26.0
 google-api-python-client==1.12.8
 google-auth==1.26.1
@@ -8,16 +11,22 @@ google-auth-httplib2==0.0.4
 googleapis-common-protos==1.52.0
 httplib2==0.19.0
 idna==2.10
+mypy-extensions==0.4.3
 oauth2client==4.1.3
 packaging==20.9
+pathspec==0.8.1
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-decouple==3.4
 pytz==2021.1
+regex==2020.11.13
 requests==2.25.1
 rsa==4.7.1
 six==1.15.0
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.3
