--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,37 @@
-appdirs==1.4.4
-black==20.8b1
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-google-api-core==1.26.0
-google-api-python-client==1.12.8
-google-auth==1.26.1
-google-auth-httplib2==0.0.4
-googleapis-common-protos==1.52.0
-httplib2==0.19.0
-idna==2.10
-mypy-extensions==0.4.3
-oauth2client==4.1.3
-packaging==20.9
-pathspec==0.8.1
-protobuf==3.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-decouple==3.4
-pytz==2021.1
-regex==2020.11.13
-requests==2.25.1
-rsa==4.7.1
-six==1.15.0
-toml==0.10.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
-uritemplate==3.0.1
-urllib3==1.26.3
+black==24.4.2 ; python_version >= "3.10" and python_version < "4.0"
+cachetools==5.4.0 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2024.7.4 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+google-api-core==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
+google-api-python-client==2.137.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.32.0 ; python_version >= "3.10" and python_version < "4.0"
+googleapis-common-protos==1.63.2 ; python_version >= "3.10" and python_version < "4.0"
+httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+oauth2client==4.1.3 ; python_version >= "3.10" and python_version < "4.0"
+packaging==24.1 ; python_version >= "3.10" and python_version < "4.0"
+pathspec==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
+platformdirs==4.2.2 ; python_version >= "3.10" and python_version < "4.0"
+proto-plus==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==5.27.2 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+python-decouple==3.8 ; python_version >= "3.10" and python_version < "4.0"
+regex==2024.5.15 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+typed-ast==1.5.5 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.11"
+uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
+
+httplib2~=0.22.0
+google-api-python-client~=2.137.0
+oauth2client~=4.1.3
