--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-api-core==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
 google-api-python-client==2.137.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth==2.32.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.63.2 ; python_version >= "3.10" and python_version < "4.0"
 httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
@@ -31,7 +32,5 @@ typed-ast==1.5.5 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.11"
 uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
-
 httplib2~=0.22.0
 google-api-python-client~=2.137.0
-oauth2client~=4.1.3
